# CyberX

./: LICENSE  README.md  changes.txt  library.txt  readme.md
doc/: changes.txt  library.txt  readme.md
sdk/: framex-1.0.3-windows-utf8-x64.7z  framex-1.0.4-windows-utf8-x64.7z
src/: CMakeLists.txt  config.h.in
src/config/: cfg_basic.ini  cfg_master.ini  cfg_worker.ini
src/cyberx/: cyberx.cpp  cyberx.h  tester.h
src/global/: CMakeLists.txt  compile.h  define.h  global.cpp  global.h
src/master/: CMakeLists.txt  master.cpp  master.h  master_.h  struct.h
src/shares/: CMakeLists.txt  shares.cpp  shares.h
src/syscfg/: CMakeLists.txt  syscfg.cpp  syscfg.h  syscfg_.h  tester.h
src/worker/: CMakeLists.txt  struct.h  worker.cpp  worker.h  worker_.h
